Agregue cosas a mis archivos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Mis 15 Años!</title>
+    <title>Mis 15 Años - Delfina</title>
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Dancing+Script:wght@400;700&display=swap"
@@ -24,40 +24,28 @@
     </audio>
 
     <section id="principal">
-        <div class="invitacion-container">
-            <h1 class="titulo-principal">Delfina</h1>
-            <h2 class="nombre-principal">Mis 15 Años</h2>
-            <p class="mensaje">
-                Hay momentos inolvidables que se atesoran en el corazón para siempre.
-                Por esa razón, quiero que compartas conmigo este día tan especial.
-            </p>
-            <div class="contador">
-                <p>Faltan:</p>
+        <div class="contenido-principal">
+            <p>18/10/2025:</p>
+            <div class="info-principal">
+                <h1 class="titulo-principal">DELFINA</h1>
+                <h2 class="nombre-principal">Mis 15 Años</h2>
+                <p class="mensaje">
+                    Hay momentos inolvidables que se atesoran en el corazón para siempre.
+                    Por esa razón, quiero que compartas conmigo este día tan especial.
+                </p>
+            </div>
+
+            <div class="contador-box">
+                <p>¿ CUÁNTO FALTA?:</p>
                 <div id="countdown"></div>
             </div>
+
         </div>
     </section>
 
-    <div class="galeria-fotos">
-        <img src="img/curtidas.jpg" alt="Foto 1">
-        <img src="img/15fc0b3d-4976-4e94-920a-b50c8885bf8d.jpg" alt="Foto 2">
-        <img src="img/b89357b1-f52e-4aa4-8647-2c80f637a7c4.jpg" alt="Foto 3">
-    </div>
-    </div>
-    </section>
-
-    <section id="informacion" class="seccion">
-        <div class="seccion-content">
-            <div class="tarjeta">
-                <i class="fas fa-gift icono"></i>
-                <h3 class="titulo-tarjeta">Regalo</h3>
-                <p>Si deseas hacerme un regalo, habrá un cofre en el que podrás poner lo que desees. </p>
-            </div>
-            <div class="tarjeta">
-                <i class="fas fa-tshirt icono"></i>
-                <h3 class="titulo-tarjeta">Dress Code</h3>
-                <p>Elegante. Evitar el uso con tonalidades el lila o violeta</p>
-            </div>
+    <section id="galeria" class="seccion">
+        <div class="galeria-fotos">
+            <img src="img/curtidas.jpg" alt="Foto 1" id="foto1">
         </div>
     </section>
 
@@ -67,15 +55,25 @@
                 <i class="fas fa-map-marker-alt icono"></i>
                 <h3 class="titulo-tarjeta">Ubicación</h3>
                 <p>Salón Nova Vila</p>
+                <p>Salta</p>
+                <p>Provincia de Salta</p>
                 <a href="https://www.google.com/maps/place/Nova+Vila+Salon+de+Eventos/@-24.8586988,-65.4519491,752m/data=!3m2!1e3!4b1!4m6!3m5!1s0x941bdd49fd878225:0x3e5a120dd8b8b8be!8m2!3d-24.8586988!4d-65.4519491!16s%2Fg%2F11ddxr9262"
                     target="_blank" class="boton-enlace">Cómo llegar</a>
             </div>
             <div class="tarjeta">
                 <i class="fas fa-music icono"></i>
                 <h3 class="titulo-tarjeta">Playlist</h3>
-                <p>¡Ayúdame a hacer la playlist de mi fiesta con las canciones infaltables! </p>
+                <p>¡Quiero que nos divirtamos juntos!</p>
+                <p>Ayúdame desde ya hacer la playlist de mi fiesta con las canciones infaltables, las que quieres oír y
+                    bailar</p>
                 <a href="https://www.youtube.com/" target="_blank" class="boton-enlace">Sugerir canciones</a>
             </div>
+        </div>
+    </section>
+
+    <section id="galeria" class="seccion">
+        <div class="galeria-fotos">
+            <img src="img/15fc0b3d-4976-4e94-920a-b50c8885bf8d.jpg" alt="Foto 2" id="foto2">
         </div>
     </section>
 
@@ -84,24 +82,49 @@
             <div class="tarjeta">
                 <i class="fas fa-check-circle icono"></i>
                 <h3 class="titulo-tarjeta">Confirmar asistencia</h3>
-                <p>Por favor, confirma si puedes asistir en el siguiente botón. Fecha límite: 10 de octubre.</p>
+                <p>Confirma tu asistencia acá</p>
+                <p>Para mí es muy importante que confirmes tu asistencia a mi cumple, también contame si tenes alguna
+                    restriccion alimentaria</p>
+                <p>Fecha limite de confirmación hasta el 10 de octubre</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLYbz4GPGNhO5ZolLHW7oHYlg9VcxF612R7YVSkZLFHkVHEA/viewform?usp=sharing&ouid=118346086608200781386"
                     class="boton-enlace">Confirmar asistencia</a>
             </div>
             <div class="tarjeta">
-                <i class="fab fa-instagram icono"></i>
-                <h3 class="titulo-tarjeta">Hashtag de Instagram</h3>
-                <p>Usa mi hashtag para subir las fotos y compartirlas conmigo: #Mis15DeDelfi </p>
+                <i class="fas fa-tshirt icono"></i>
+                <h3 class="titulo-tarjeta">Dress Code</h3>
+                <p>ELEGANTE</p>
+                <p>Evitar el uso de tonalidades lila o violeta.</p>
             </div>
         </div>
     </section>
 
-    <section class="section" style="text-align:center">
-        <h2 class="script" style="margin:0 0 8px">¡Te espero!</h2>
-        <h2 style="margin:0; letter-spacing:2px">Delfi</h2>
-        <p style="margin-top:16px">
-            <a class="btn" href="#" data-print>PDF RECUERDO</a>
-        </p>
+    <section id="informacion" class="seccion">
+        <div class="seccion-content">
+            <div class="tarjeta">
+                <i class="fas fa-gift icono"></i>
+                <h3 class="titulo-tarjeta">Gitf Card</h3>
+                <p>El mejor regalo es que estés junto a mí en este gran día.</p>
+                <p>Pero si quieres obsequiarme algo, podes hacerlo a la siguiente cuenta:</p>
+                <p>alias: delfi-altamirano</p>
+            </div>
+
+            <div class="tarjeta">
+                <i class="fab fa-instagram icono"></i>
+                <h3 class="titulo-tarjeta">Instagram Hashtag</h3>
+                <p>Usa mi hashtag para subir las fotos y compartirlas conmigo: #Mis15DeDelfi</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="galeria" class="seccion">
+        <div class="galeria-fotos">
+            <img src="img/b89357b1-f52e-4aa4-8647-2c80f637a7c4.jpg" alt="Foto 3" id="foto3">
+        </div>
+    </section>
+
+    <section class="seccion" style="text-align:center">
+        <h2 class="nombre-principal" style="margin:0 0 8px">¡Te espero!</h2>
+        <h1 class="titulo-principal" style="margin:0; letter-spacing:2px">Delfi</h1>
     </section>
 
     <footer class="footer">
