cambio de diseño

--- a/index.html
+++ b/index.html
@@ -10,42 +10,45 @@
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Dancing+Script:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <video autoplay muted loop id="mi-video-fondo">
-        <source src="img/fondo glitter lila.mp4" type="video/mp4">
+        <source src="soporte/fondo glitter lila.mp4" type="video/mp4">
         Tu navegador no soporta el video.
     </video>
 
     <audio id="musica-fondo" loop autoplay>
-        <source src="img/Love Me like You Do.mp3" type="audio/mp3">
+        <source src="soporte/tinywow_One Direction - Night Changes_83820573.mp3" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
     <section id="principal">
         <div class="contenido-principal">
-            <p>18/10/2025:</p>
+            <button class="play" aria-label="Dale play">▶</button>
+            <p class="play-label">¡Dale Play!</p>
+            <p class="date">18/10/2025</p>
             <div class="info-principal">
                 <h1 class="titulo-principal">DELFINA</h1>
-                <h2 class="nombre-principal">Mis 15 Años</h2>
+                <h2 class="nombre-principal">Mis quince</h2>
                 <p class="mensaje">
                     Hay momentos inolvidables que se atesoran en el corazón para siempre.
                     Por esa razón, quiero que compartas conmigo este día tan especial.
                 </p>
             </div>
-
             <div class="contador-box">
-                <p>¿ CUÁNTO FALTA?:</p>
+                <p>¿ CUÁNTO FALTA ?</p>
                 <div id="countdown"></div>
             </div>
-
         </div>
     </section>
 
     <section id="galeria" class="seccion">
         <div class="galeria-fotos">
-            <img src="img/curtidas.jpg" alt="Foto 1" id="foto1">
+            <img src="soporte/titi1.jpg" alt="Foto 1" id="foto1">
         </div>
     </section>
 
@@ -55,7 +58,7 @@
                 <i class="fas fa-map-marker-alt icono"></i>
                 <h3 class="titulo-tarjeta">Ubicación</h3>
                 <p>Salón Nova Vila</p>
-                <p>Salta</p>
+                <p>Av. Ex Combatientes de Malvinas</p>
                 <p>Provincia de Salta</p>
                 <a href="https://www.google.com/maps/place/Nova+Vila+Salon+de+Eventos/@-24.8586988,-65.4519491,752m/data=!3m2!1e3!4b1!4m6!3m5!1s0x941bdd49fd878225:0x3e5a120dd8b8b8be!8m2!3d-24.8586988!4d-65.4519491!16s%2Fg%2F11ddxr9262"
                     target="_blank" class="boton-enlace">Cómo llegar</a>
@@ -73,7 +76,7 @@
 
     <section id="galeria" class="seccion">
         <div class="galeria-fotos">
-            <img src="img/15fc0b3d-4976-4e94-920a-b50c8885bf8d.jpg" alt="Foto 2" id="foto2">
+            <img src="soporte/titi2.jpg" alt="Foto 2" id="foto2">
         </div>
     </section>
 
@@ -107,7 +110,6 @@
                 <p>Pero si quieres obsequiarme algo, podes hacerlo a la siguiente cuenta:</p>
                 <p>alias: delfi-altamirano</p>
             </div>
-
             <div class="tarjeta">
                 <i class="fab fa-instagram icono"></i>
                 <h3 class="titulo-tarjeta">Instagram Hashtag</h3>
@@ -118,20 +120,18 @@
 
     <section id="galeria" class="seccion">
         <div class="galeria-fotos">
-            <img src="img/b89357b1-f52e-4aa4-8647-2c80f637a7c4.jpg" alt="Foto 3" id="foto3">
+            <img src="soporte/titi3.jpg" alt="Foto 3" id="foto3">
         </div>
     </section>
 
     <section class="seccion" style="text-align:center">
-        <h2 class="nombre-principal" style="margin:0 0 8px">¡Te espero!</h2>
-        <h1 class="titulo-principal" style="margin:0; letter-spacing:2px">Delfi</h1>
+        <h2 class="despedida-subtitulo" style="margin:0 0 8px">¡Te espero!</h2>
+        <h1 class="despedida-titulo" style="margin:0; letter-spacing:2px">Delfi</h1>
     </section>
 
     <footer class="footer">
         © 2025 ✨ Desarrollado con ❤️ por Jor Alt
     </footer>
-
-    <div class="ribbon">NO TE LO PODÉS PERDER</div>
 
     <script src="script.js"></script>
 </body>
