cambios de style

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="seccion-content">
                 <div class="tarjeta animar-entrada animar-desde-abajo">
                     <i class="fas fa-check-circle icono-alt icono animar-contenido"></i>
-                    <h3 class="titulo-tarjeta">Confirmar asistencia</h3>
+                    <h3 class="titulo-tarjeta">Confirma tu asistencia acá</h3>
                     <p>Para mí es muy importante que confirmes tu asistencia. También contame si tenés alguna
                         restricción alimentaria.</p>
                     <p>Fecha límite de confirmación: 10 de octubre.</p>
@@ -107,8 +107,8 @@
                 <div class="tarjeta animar-entrada animar-desde-abajo">
                     <i class="fas fa-tshirt icono-alt icono animar-contenido"></i>
                     <h3 class="titulo-tarjeta">Dress Code</h3>
-                    <p>ELEGANTE</p>
-                    <p>Evitar el uso de tonalidades Morado o violeta.</p>
+                    <p class="Codigo">ELEGANTE</p>
+                    <p>Evitar el uso de tonalidades Morado o Violeta</p>
                 </div>
             </div>
         </section>
