Actualización de index.html y style.css, y agregado de imágenes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section class="seccion">
             <div class="galeria-fotos">
-                <img src="soporte/titi1.jpg" alt="Delfina en una sesión de fotos" id="foto1"
+                <img src="soporte/agua1.jpg" alt="Delfina en una sesión en el agua" id="foto1"
                     class="animar-entrada animar-desde-derecha">
             </div>
         </section>
@@ -88,7 +88,7 @@
 
         <section class="seccion">
             <div class="galeria-fotos">
-                <img src="soporte/titi2.jpg" alt="Delfina sonriendo" id="foto2"
+                <img src="soporte/pepelitos.jpg" alt="Delfina pepelitos" id="foto2"
                     class="animar-entrada animar-desde-abajo">
             </div>
         </section>
@@ -120,19 +120,20 @@
                     <h3 class="titulo-tarjeta">Gift Card</h3>
                     <p>El mejor regalo es que estés junto a mí en este gran día.</p>
                     <p>Pero si quieres obsequiarme algo, podés hacerlo a la siguiente cuenta:</p>
-                    <p>alias: delfi-altamirano</p>
+                    <p>Alias: delfi-altamirano</p>
+                    <p>Titular: Antonella Delfina Altamirano </p>
                 </div>
                 <div class="tarjeta animar-entrada animar-desde-abajo">
                     <i class="fab fa-instagram icono-alt icono animar-contenido"></i>
                     <h3 class="titulo-tarjeta">Instagram Hashtag</h3>
-                    <p>Usa mi hashtag para subir las fotos y compartirlas conmigo: #Mis15DeDelfi</p>
+                    <p>Usa mi hashtag para subir las fotos y compartirlas conmigo: #DelfiXV💜</p>
                 </div>
             </div>
         </section>
 
         <section class="seccion">
             <div class="galeria-fotos">
-                <img src="soporte/titi3.jpg" alt="Primer plano de Delfina" id="foto3"
+                <img src="soporte/elementos.jpg" alt="elementos de Delfina" id="foto3"
                     class="animar-entrada animar-desde-izquierda">
             </div>
         </section>
